--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,12 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
+OculusPlatform/
+OSPNative/
+OVR/
+OvrAvatar/
+OvrAudioManager/
+SteamVR/
+Plugins/
+
